snapshots/care/data4life/hc-result-sdk-kmp/error/0.1.1-SNAPSHOT/maven-metadata.xml.sha512
a6edde3680f9983efe62c042900e7779fd7170d4f653ba5cfa7b0efe9fcf088019fccc8d781ba28d901f8793f496da547879d5b7f204d8a88ca35747777c35b5